--- a/hw6.tex
+++ b/hw6.tex
@@ -260,40 +260,40 @@
 
 \section*{Problem1}
 
-In the following answer, denote $n$ as total days to detect, $k$ as total target days of drought, $i\in [0,n]$ as $i$-th day, $p_i\in [0,1]$ as the probability of rain in $i$-th day $\Rightarrow (1-p_i)$ is the probability of drought on $i$-th day. All $p_i$ are independent. We will focus on number of drought days in the following discussion.
+In the following answer, denote $n$ as total days to detect, $k$ as total target days of drought, $p_i\in [0,1]$ as the probability of rain in $i$-th day, $i\in [0,n]$ $\Rightarrow (1-p_i)$ is the probability of drought on $i$-th day. All $p_i$ are independent. We will focus on number of drought days in the following discussion.
 
 \subsection*{Algorithm}
 \begin{proof}[Algorithm]{}
 		\renewcommand{\qedsymbol}{}
-		An Algorithm to calculate the sequence of die rolls gets to winning square as quickly as possible. For the input of function, we have a list \texttt{p[]} size of $n+1$ (extra $0$ for day $0$ case, indexed from 0 to $n$) storing for the each day 
+		An Algorithm to compute the probability that more than k days will be drought days in 2023
 		\begin{lstlisting}[basicstyle=\fontsize{8}{9}\selectfont\ttfamily]
-		/**
-		* p[] is the input probability list, p[i] stores probability p_i of raining in i-th day, index from 0 to n, p[0] = 0
-		* n is the observing days
-		* k is the targeting days
-		* in the following code, dp[i][j] stores the probability that i days have j days drought
-		**/
-		float findProb(float[] p, int n, int k){
-    		float[][] dp = new dp[n+1][n+1]; // +1 for extra 0 bases
-            set (n+1)*(k+1) all entry in dp[][] to 0;
-            dp[0][0] = 0;
-            dp[1][0] = p[1]; // 1 day AND 0 day drought = p_1
-            dp[1][1] = 1-p[1]; // 1 day AND 1 day drought = 1-p_1
-            // initialization
-            for(int i = 2; i <= n; ++i){
-                dp[i][0] = dp[i-1][0] * p[i];
-                dp[i][i] = dp[i-1][i-1] * (1-p[i]);
-            }
-            // start finding
-            for(int i = 1; i <= n; ++i){
-                for(int j = 1; j < i; ++j){ // never reach dp[i][i], which has been initialized
-                    dp[i][j] = dp[i-1][j]*p[i] + dp[i-1][j-1]*(1-p[i]);
-                }
-            }
-            float res;
-            for(int i = k+1; i <= n; i++) res += dp[n][i];
-            return res;
-		}
+/**
+* p[] is the input probability list, p[i] stores probability p_i of raining in i-th day, index from 0 to n, p[0] = 0
+* n is the observing days
+* k is the targeting days
+* in the following code, dp[i][j] stores the probability that i days have j days drought
+**/
+float findProb(float[] p, int n, int k){
+	float[][] dp = new dp[n+1][n+1]; // +1 for extra 0 bases
+    set (n+1)*(k+1) all entry in dp[][] to 0;
+    dp[0][0] = 0;
+    dp[1][0] = p[1]; // 1 day AND 0 day drought = p_1
+    dp[1][1] = 1-p[1]; // 1 day AND 1 day drought = 1-p_1
+    // initialization
+    for(int i = 2; i <= n; ++i){
+      dp[i][0] = dp[i-1][0] * p[i];
+      dp[i][i] = dp[i-1][i-1] * (1-p[i]);
+    }
+    // start finding
+    for(int i = 1; i <= n; ++i){
+      for(int j = 1; j < i; ++j){ // never reach dp[i][i], which has been initialized
+          dp[i][j] = dp[i-1][j]*p[i] + dp[i-1][j-1]*(1-p[i]);
+      }
+    }
+    float res;
+    for(int i = k+1; i <= n; i++) res += dp[n][i];
+    return res;
+}
 
         
 		\end{lstlisting} 
@@ -334,6 +334,88 @@ In the following answer, denote $n$ as total days to detect, $k$ as total target
 \end{proof}
 
 \subsection*{Running Time}
+
+
+
+
+\section*{Problem2}
+
+\subsection*{Algorithm}
+In the following answer, $G = (V,E)$ is the graph we will discuss and $x=x_1x_2\cdots x_T$ as the string to compute. Denote $|V|$ as $n$, $|E|$ as $m$, size of $x$ as $T$, starting node as $s$. We store a 2D array \texttt{a[][]}. For convenience, all nodes have corresponding index to store in a[v][k], $v\in V, k\in [0, T]$. For each node $v\in V$, v stores array q[] for the likelihood of outputting 'a-z' and p[] for the likelihood of picking an out-going edge to another node: v.q[$x_i$] is the probability of node $v$ writing down $x_i, i\in [1...T]$; v.p[$u$] is the probability of node v goes to $u \neq v \in V$ through an out-going edge $e(v,u)$. 
+
+\begin{proof}[Algorithm]{}
+		\renewcommand{\qedsymbol}{}
+		An Algorithm to find the maximum likelihood of any vertex sequence for the given string
+		\begin{lstlisting}[basicstyle=\fontsize{8}{9}\selectfont\ttfamily]
+Define Graph G = (V,E) where V is the node set and E is the edge set;
+/**
+* for each node v in V, we have two arrays
+* 1. v.q[] to store the likelihood of writing down 'a-z'
+* 2. v.p[] to store the likelihood of picking an edge to another node
+*
+* x indexed from 1 to T
+**/
+
+float findProb2(Graph G, String str){
+    n := size of V;
+    m := size of E;
+    T := size of str;
+    initialize a 2D array a[n][T], set each place to 0;
+    a[s][0] = s.q[str[0]];
+    for(int k = 1; k <= T; k++){
+        for(all node v in V){
+            for(all node u that has an incident on v){
+                a[s][k] = a[u][k-1] * u.p[s] * s.q[str[k]];
+            }
+        }
+    }
+    float res = 0;
+    for(all node v in V){
+        if(a[v][k] > res) res = a[v][k];
+    }
+    return res;
+}
+
+        
+		\end{lstlisting} 
+\end{proof}
+
+
+
+\begin{proof}[Explanation]{}
+		\renewcommand{\qedsymbol}{} % hide the QED square
+       
+\end{proof}
+
+\subsection*{Proof}
+\begin{proof}[Correctness]{}
+    
+    
+\textbf{Goal:} 
+
+\textbf{Analysis:} 
+    
+\textbf{Subproblem:}
+
+    
+\textbf{Recurrence Relation:}
+    
+    
+\textbf{Base Case:}
+    
+    
+\textbf{Correctness Proof:}
+
+    
+  
+
+\end{proof}
+\begin{proof}[Termination]{}
+
+\end{proof}
+
+\subsection*{Running Time}
+
 
 
 \end{document}
